# similarity

./: LICENSE  README.md  pyproject.toml  vsm.py
util/: dataloader.py
