[tool.poetry]
name = "similarity"
version = "0.1.0"
description = "文本相似度计算"
authors = ["ZelKnow <shenghuang@stu.pku.edu.cn>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
